--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/bcryptjs": "^2.4.6",
 		"@types/eslint": "^8.56.0",
 		"@types/leaflet": "^1.9.12",
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
@@ -39,6 +40,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"bcryptjs": "^2.4.3",
 		"mongodb": "^6.6.2"
 	}
 }
